Add HubSpot form integration with email capture and animated hero CTA

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,17 @@
 {
   "version": 2,
   "outputDirectory": ".",
-  "buildCommand": "echo 'Static site - no build required'"
+  "buildCommand": "echo 'Static site - no build required'",
+  "functions": {
+    "api/submit-form.js": {
+      "runtime": "@vercel/node@3.0.0"
+    },
+    "api/capture-email.js": {
+      "runtime": "@vercel/node@3.0.0"
+    }
+  },
+  "rewrites": [
+    { "source": "/api/submit-form", "destination": "/api/submit-form.js" },
+    { "source": "/api/capture-email", "destination": "/api/capture-email.js" }
+  ]
 }
